# infinite-diffusion

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
diffusion_lm/: token_diffusion.py
docs/: current-dlm-writeup.md
scripts/: evaluate_hf_diffusion_ablations.py  fetch_corpus.py  make_hf_diffusion_gif.py  sample_hf_masked_diffusion.py  train_hf_masked_diffusion.py
tests/: test_hf_diffusion.py
